OTAT-556: Return PaginatedResponse in GetEvidenceListRestController